--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -51,7 +51,7 @@
               <ul class=" navbar-nav my-2 my-lg-0">
                   <li class="nav-item active">
                       <a class="nav-link" href="">
-                          <!--Olá {{ usuario }}-->
+                          Olá {{ usuario }}
                       </a>
                   </li>
 
@@ -68,6 +68,9 @@
                   </li>
                   <li class="nav-item active ">
                       <a class="nav-link" href="/manage_payments"> Manage Payments <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item active ">
+                      <a class="nav-link" href="/manage_inventory"> Inventory control <span class="sr-only">(current)</span></a>
                   </li>
                   {% endif %}
 
