--- a/store/templates/manage_inventory.html
+++ b/store/templates/manage_inventory.html
@@ -1,30 +1,38 @@
-{% extends 'base.html' %}
-{% block content %}
-{% load cart %}
-{% load custom_filter %}
-<form name="form_Inventory" class="form-inline" action="" method="POST">
-    {% csrf_token %}
-    <div class="container">
-        <div class="border rounded p-4 m-4">
-            <p class="display-4 pl-4 ml-4">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspManage Inventory</p>
-            <table class="table" border="0">
-                <thead>
+<html lang="en">
+<body id="page-top">
+    <form method="POST" action="/manage_inventory/" class="form-horizontal">
+        {% extends 'base.html' %}
+        {% block content %}
+        {% load cart %}
+        {% load custom_filter %}
+        {% csrf_token %}
+        <div class="container">
+            <div class="border rounded p-4 m-4">
+                <p class="display-4 pl-4 ml-4">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspManage Inventory</p>
+                <table class="table" border="0">
+                    <thead>
+                        <tr>
+                            <th> Product ID </th>
+                            <th> Product Name </th>
+                            <th> Quantity </th>
+                            <th> Operations </th>
+                        </tr>
+                    </thead>
+                    {% for item in Inventory %}
                     <tr>
-                        <th> Product </th>
-                        <th> Quantity </th>
+                        <td> {{ item.0 }} </td>
+                        <td> {{ item.1 }} </td>
+                        <td><input size="4" id="Qtde" name="Qtde" readonly value={{ item.2 }}></td>
+                        <td><center><a class="btn btn-success" href="/manage_inventory/add/{{ item.0 }}/10"></span> +10  </a></center>
+                        <td><center><a class="btn btn-success" href="/manage_inventory/add/{{ item.0 }}/50"></span> +50 </a></center>
+                        <td><center><a class="btn btn-danger" href="/manage_inventory/subtract/{{ item.0 }}/10"></span> -10  </a></center>
+                        <td><center><a class="btn btn-danger" href="/manage_inventory/subtract/{{ item.0 }}/50"></span> -50 </a></center>
                     </tr>
-                </thead>
-                {% for item in Inventory %}
-                <tr>
-                    <td>{{item.0}} </td>
-                    <td><input size="4" id="Fator_Vitoria_Casa" name="Fator_Vitoria_Casa" value={{ item.1 }}></td>
-                </tr>
-                {% endfor %}
-                <tr>
-                    <td align="center"> <a class="btn btn-success" href="/manage_inventory/update"<span class="glyphicon glyphicon-ok"></span> Update </a> </td>
-                </tr>
-            </table>
+                    {% endfor %}
+                </table>
+            </div>
         </div>
-    </div>
-</form>
+    </form>
+</body>
+</html>
 {% endblock %}
