--- a/store/templates/cart.html
+++ b/store/templates/cart.html
@@ -42,7 +42,7 @@
 </script>
 <div class="container">
     <div class="border rounded p-4 m-4">
-        <p class="display-4 pl-4 ml-4">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspYour Cart </p>
+        <p class="display-4 pl-4 ml-4" align="center">Your Cart </p>
         <hr>
         <table class="table">
             <thead>
