--- a/store/templates/manage_payments.html
+++ b/store/templates/manage_payments.html
@@ -6,7 +6,7 @@
     {% csrf_token %}
     <div class="container">
         <div class="border rounded p-4 m-4">
-            <p class="display-4 pl-4 ml-4">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspManage Payments</p>
+            <p class="display-4 pl-4 ml-4" align="center">Manage Payments</p>
             <table class="table" border="0">
                 <thead>
                     <tr>
